[package]
name = "cube-rotations"
version = "1.0.0"
edition = "2021"
authors = ["froderick <velona@ahiru.eu>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Models the rotations that can happen on a cube without changing the set of planes to which its faces are parallel."
homepage = "https://github.com/DoubleHyphen/cube-rotations"
documentation = "https://docs.rs/cube-rotations/"
repository = "https://github.com/DoubleHyphen/cube-rotations"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
nalgebra = "0.31.2"
rand = "0.8.5"
